Update 1. Character Input.md

--- a/1. Character Input.md
+++ b/1. Character Input.md
@@ -6,7 +6,7 @@ Print out a message addressed to them that tells them the year that they will tu
 # Answer
 
 ```python
+from datetime import datetime
 
-print("Hello")
-
+name = 
 ```
