Update 1. Character Input.md

--- a/1. Character Input.md
+++ b/1. Character Input.md
@@ -8,5 +8,9 @@ Print out a message addressed to them that tells them the year that they will tu
 ```python
 from datetime import datetime
 
-name = 
+name = input("What is your name?")
+age = int(input("How old are you?"))
+current_year = datetime.now().year
+
+print("In " + str(current_year + (100 - age)) + ", " + name + " will be a hundred years old.")
 ```
