--- a/3. List Less Than Ten.md
+++ b/3. List Less Than Ten.md
@@ -1,1 +1,5 @@
-# List Less Than Ten
+# 3. List Less Than Ten
+
+Take a list, say for example this one:   
+list = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]   
+and write a program that prints out all the elements of the list that are less than 5.   
