--- a/3. List Less Than Ten.md
+++ b/3. List Less Than Ten.md
@@ -5,3 +5,13 @@ list = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]
 and write a program that prints out all the elements of the list that are less than 5.   
 
 # Answer
+```python
+list = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]
+Answer_list = []
+
+for num in list:
+    if num < 5:
+        Answer_list.append(num)
+        
+print(Answer_list)
+```
