Update and rename 3. List Less Than Ten.md to 3. List Less Than Five.md

--- a/3. List Less Than Five.md
+++ b/3. List Less Than Five.md
@@ -1,4 +1,4 @@
-# 3. List Less Than Ten
+# 3. List Less Than Five
 
 Take a list, say for example this one:   
 list = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]   
