--- a/4. Divisors.md
+++ b/4. Divisors.md
@@ -6,6 +6,13 @@ For example, 13 is a divisor of 26 because 26 / 13 has no remainder.
 
 # Answer
 
-``` python
+```python
+number = int(input("Enter the number."))
+answer = []
 
+for i in range(1, number + 1, 1):
+    if number % i == 0:
+        answer.append(i)
+        
+print(answer)
 ```
