--- a/5. List Overlap.md
+++ b/5. List Overlap.md
@@ -4,3 +4,25 @@ Randomly generate two lists.
 And write a program that returns a list that contains only the elements that are common between the lists (without duplicates).   
 Make sure your program works on two lists of different sizes.   
 
+# Answer
+
+```python
+import random
+
+# Generate random two lists
+list_1 = random.choices(range(1, 11), k=random.randint(5,15))
+list_2 = random.choices(range(1, 11), k=random.randint(5,15))
+
+print(list_1)
+print(list_2)
+
+# Generate a list contain common elements between two lists
+list_answer = []
+
+for a in list_1:
+    for b in list_2:
+        if a == b:
+            list_answer.append(a)
+            
+print(list(set(list_answer)))
+```
