Update 6. String Lists.md

--- a/6. String Lists.md
+++ b/6. String Lists.md
@@ -6,5 +6,24 @@ A palindrome is a string that reads the same forwards and backwards.
 # Answer
 
 ```python
+word = input("Enter any word.")
 
+# Convert word to list
+word_list = []
+for i in range(len(word)):
+    word_list.append(word[i])
+
+# Check if the word is palindrome or not  
+len_word_list = len(word_list) // 2
+is_palindrome = True
+
+for j in range(len_word_list):
+    if word_list[j] != word_list[len(word_list)-j-1]:
+        is_palindrome = False
+        break
+    
+if is_palindrome:
+    print(word + " is a palindrome.")
+else:
+    print(word + " is not a palindrome.")
 ```
