--- a/8. Rock Paper Scissors.md
+++ b/8. Rock Paper Scissors.md
@@ -1,1 +1,11 @@
 # 8. Rock Paper Scissors
+
+Make a two-player Rock-Paper-Scissors game.   
+Ask for player plays (using input), compare them, print out a message of congratulations to the winner.   
+And ask if the players want to start a new game.   
+
+# Answer
+
+```python
+
+```
