Update 8. Rock Paper Scissors.md

--- a/8. Rock Paper Scissors.md
+++ b/8. Rock Paper Scissors.md
@@ -7,5 +7,50 @@ And ask if the players want to start a new game.
 # Answer
 
 ```python
+import random
 
+print("Welcome to the Rock-Papaer-Scissors game!")
+
+while True:
+    user = input("Choose between Rock, Paper or Scissors.")
+    computer = random.choice(["Rock", "Paper", "Scissors"])
+    
+    if user == "Rock":
+        if computer == "Rock":
+            print("computer choose " + computer)
+            print("Draw!")
+        elif computer == "Scissors":
+            print("computer choose " + computer)
+            print("You win!")
+        elif computer == "Paper":
+            print("computer choose " + computer)
+            print("You lose!")
+    elif user == "Paper":
+        if computer == "Rock":
+            print("computer choose " + computer)
+            print("You win!")
+        elif computer == "Scissors":
+            print("computer choose " + computer)
+            print("You lose!")
+        elif computer == "Paper":
+            print("computer choose " + computer)
+            print("Draw")
+    elif user == "Scissors":
+        if computer == "Rock":
+            print("computer choose " + computer)
+            print("You lose!")
+        elif computer == "Scissors":
+            print("computer choose " + computer)
+            print("Draw!")
+        elif computer == "Paper":
+            print("computer choose " + computer)
+            print("You win")
+    else:
+        print("You entered the wrong answer.")
+        
+    restart = input("Do you want to play again? (Yes/No)")
+    if restart == "Yes":
+        continue
+    else:
+        break
 ```
