Update 10. List Overlap Comprehensions.md

--- a/10. List Overlap Comprehensions.md
+++ b/10. List Overlap Comprehensions.md
@@ -25,5 +25,6 @@ for number_1 in list_1:
             
 print(list_1)
 print(list_2)
-print(set(answer_list))
+answer_list = set(answer_list)
+print(list(answer_list))
 ```
