--- a/04. Divisors.md
+++ b/04. Divisors.md
@@ -7,7 +7,7 @@ For example, 13 is a divisor of 26 because 26 / 13 has no remainder.
 # Answer
 
 ```python
-number = int(input("Enter the number."))
+number = int(input("Enter the number: "))
 answer = []
 
 for i in range(1, number + 1, 1):
