--- a/12. List Ends.md
+++ b/12. List Ends.md
@@ -7,5 +7,14 @@ For practice, write this code inside a function.
 # Answer
 
 ```python
+list_1 = input("input the list.").split(",")
 
+def list_first_and_last(list_1):
+    list_answer = []
+    
+    list_answer.append(list_1[0])
+    list_answer.append(list_1[len(list_1)-1])
+    print(list_answer)
+    
+list_first_and_last(list_1)
 ```
