--- a/14. List Remove Duplicates.md
+++ b/14. List Remove Duplicates.md
@@ -1,3 +1,39 @@
 # 14. List Remove Duplicates
 
 Write a program that takes a list and returns a new list that contains all the elements of the first list minus all the duplicates.   
+Write two different functions to do this - one using a loop and constructing a list, and another using sets.   
+
+# Answer
+
+```python
+# Method 1
+import random
+
+size = int(input("Enter the size of the array."))
+list_1 = random.choices(range(5,16), k = size)
+
+def Remove_duplicates(list_a):
+    print(list_a)
+    new_list = set(list_a)
+    print(list(new_list))
+    
+Remove_duplicates(list_1)
+
+# Method 2
+import random
+
+size = int(input("Enter the size of the array."))
+list_1 = random.choices(range(5,16), k = size)
+list_answer = []
+
+def Remove_duplicates(list_a):
+    print(list_a)
+    
+    for num in list_a:
+        if num not in list_answer:
+            list_answer.append(num)
+    
+    print(list_answer)
+    
+Remove_duplicates(list_1)
+```
