Update 14. List Remove Duplicates.md

--- a/14. List Remove Duplicates.md
+++ b/14. List Remove Duplicates.md
@@ -6,7 +6,7 @@ Write two different functions to do this - one using a loop and constructing a l
 # Answer
 
 ```python
-# Method 1
+# Method 1 - using set
 import random
 
 size = int(input("Enter the size of the array."))
@@ -19,7 +19,7 @@ def Remove_duplicates(list_a):
     
 Remove_duplicates(list_1)
 
-# Method 2
+# Method 2 - using loop
 import random
 
 size = int(input("Enter the size of the array."))
