--- a/15. Reverse Word Order Solutions.md
+++ b/15. Reverse Word Order Solutions.md
@@ -2,8 +2,7 @@
 
 Write a program (using functions!) that asks the user for a long string containing multiple words.   
 Print back to the user the same string, except with the words in backwards order.   
-For example)   
-  My name is Michele   ->   Michele is name My
+For example) My name is Michele   ->   Michele is name My
   
 # Answer
 
