Update 15. Reverse Word Order Solutions.md

--- a/15. Reverse Word Order Solutions.md
+++ b/15. Reverse Word Order Solutions.md
@@ -7,5 +7,7 @@ For example) "My name is Michele"   ->   "Michele is name My"
 # Answer
 
 ```python
-
+user_string = input("Enter the sentence.").split(" ")
+user_string = user_string[::-1]
+print(" ".join(user_string))
 ```
