Update 16. Password Generator.md

--- a/16. Password Generator.md
+++ b/16. Password Generator.md
@@ -4,3 +4,38 @@ Write a password generator in Python.
 Strong passwords have a mix of lowercase letters, uppercase letters, numbers, and symbols.    
 The passwords should be random, generating a new password every time the user asks for a new password.    
 
+# Answer
+
+```python
+import random
+
+# letters, numbers, and symbols
+upper_letter = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']
+lower_letter = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+number = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']
+symbols = ['!', '#', '$', '%', '&', '*', '+']
+
+# user input
+upper_letter_num = input("How many upper letters do you want(0~26): ")
+lower_letter_num = input("How many lower letters do you want(0~26): ")
+number_num = input("How many numbers do you want(0~10): ")
+symbols_num = input("How many symbols do you want(0~7): ")
+
+# selection
+upper_letter_list = random.sample(upper_letter, int(upper_letter_num))
+lower_letter_list = random.sample(lower_letter, int(lower_letter_num))
+number_list = random.sample(number, int(number_num))
+symbols_list = random.sample(symbols, int(symbols_num))
+
+# generate password
+password = []
+password.extend(upper_letter_list)
+password.extend(lower_letter_list)
+password.extend(number_list)
+password.extend(symbols_list)
+random.shuffle(password)
+
+print("Your password: ", end = " ")
+for i in password:
+    print(i, end = "")
+```
