--- a/39. Character Input Datetime Solution.md
+++ b/39. Character Input Datetime Solution.md
@@ -1,7 +1,8 @@
 # 39. Character Input Datetime Solution
 
 Create a program that asks the user to enter their name and their age.    
-Print out a message addressed to them that tells them the year that they will turn 100 years old, except don’t explicitly write out the year.    
+Print out a message addressed to them that tells them the year that they will turn 100 years old.    
+Except don’t explicitly write out the year.    
 Use the built-in Python datetime library to make the code you write work during every year, not just the one we are currently in.   
 
 # Answer
