--- a/39. Character Input Datetime Solution.md
+++ b/39. Character Input Datetime Solution.md
@@ -8,5 +8,10 @@ Use the built-in Python datetime library to make the code you write work during 
 # Answer
 
 ```python
+import datetime
 
+current_year = datetime.datetime.now().year
+name = input("What is your name? : ")
+age = int(input("How old are you? : "))
+print(f"f{name} will be 100 years old in {current_year - age + 100}")
 ```
