--- a/39. Character Input Datetime Solution.md
+++ b/39. Character Input Datetime Solution.md
@@ -13,5 +13,5 @@ import datetime
 current_year = datetime.datetime.now().year
 name = input("What is your name? : ")
 age = int(input("How old are you? : "))
-print(f"f{name} will be 100 years old in {current_year - age + 100}")
+print(f"{name} will be 100 years old in {current_year - age + 100}")
 ```
