Update 30. Pick Word.md

--- a/30. Pick Word.md
+++ b/30. Pick Word.md
@@ -10,7 +10,7 @@ Each line in the file contains a single word.
 ```python
 import random
 
-# word file
+# import word file
 file = open("C:/Users/USER/Desktop/sowpods.txt", 'r')
 line = file.readlines()
 word_list = []
@@ -18,7 +18,7 @@ for word in line:
     word_list.append(word)
 file.close()
 
-# word choose
+# choose word
 choice_word = random.choice(word_list)
 print(choice_word)
 ```
