Update 31. Guess Letters.md

--- a/31. Guess Letters.md
+++ b/31. Guess Letters.md
@@ -6,3 +6,5 @@ The player guesses one letter at a time until the entire word has been guessed.
 Let’s say the word the player has to guess is “EVAPORATE”.   
 For this exercise, write the logic that asks a player to guess a letter and displays letters in the clue word that were guessed correctly.   
 For now, let the player guess an infinite number of times until they get the entire word.   
+As a bonus, keep track of the letters the player guessed and display a different message if the player tries to guess that letter again.   
+Remember to stop the game when all the letters have been guessed correctly.   
