Update 31. Guess Letters.md

--- a/31. Guess Letters.md
+++ b/31. Guess Letters.md
@@ -6,5 +6,52 @@ The player guesses one letter at a time until the entire word has been guessed.
 Let’s say the word the player has to guess is “EVAPORATE”.   
 For this exercise, write the logic that asks a player to guess a letter and displays letters in the clue word that were guessed correctly.   
 For now, let the player guess an infinite number of times until they get the entire word.   
+
 As a bonus, keep track of the letters the player guessed and display a different message if the player tries to guess that letter again.   
 Remember to stop the game when all the letters have been guessed correctly.   
+
+# Answer
+
+```python
+import random
+
+# introduction
+print("Welcome to the Hangman Game!")
+
+# import word file
+file = open("C:/Users/USER/Desktop/sowpods.txt", 'r')
+line = file.readlines()
+word_list = []
+for word in line:
+    word = word.strip()
+    word_list.append(word)
+file.close()
+
+# choose word
+choice_word = random.choice(word_list)
+choice_word_list = list(choice_word)
+
+# Make answer list
+answer_list = []
+for i in range(len(choice_word_list)):
+    answer_list.append("_")
+print(answer_list)
+
+# Get the word from user
+condition =  True
+
+while condition:
+    guess_word = input("Guess the letter: ").upper()
+
+    while guess_word in answer_list:
+        guess_word = input("Guess another letter: ").upper()
+
+    for i in range(len(answer_list)):
+        if choice_word_list[i] == guess_word:
+            answer_list[i] = guess_word
+            print(answer_list)
+
+    if answer_list == choice_word_list:
+        print("You guessed the correct word!")
+        condition = False
+```
