--- a/32. Hangman.md
+++ b/32. Hangman.md
@@ -26,13 +26,13 @@ file.close()
 choice_word = random.choice(word_list)
 choice_word_list = list(choice_word)
 
-# Make answer list
+# make answer list
 answer_list = []
 for i in range(len(choice_word_list)):
     answer_list.append("_")
 print(answer_list)
 
-# Get the word from user
+# get the word from user
 condition = True
 counter = 6
 
@@ -55,11 +55,13 @@ while condition:
 
     print(f"You have {counter} times of chance.")
 
+    # User guessed the word correctly
     if answer_list == choice_word_list:
         print("You guessed the correct word!")
-        print(counter)
+        print(f"You still have {counter} of chances.")
         condition = False
-    
+
+    # game over
     if counter == 0:
         print("Game over")
         condition = False
