--- a/34. Birthday Json.md
+++ b/34. Birthday Json.md
@@ -4,5 +4,6 @@ In the previous exercise we created a dictionary of famous scientists’ birthda
 Modify your program to load the birthday dictionary from a JSON file on disk, rather than having the dictionary defined in the program.   
 
 Bonus:   
-Ask the user for another scientist’s name and birthday to add to the dictionary, and update the JSON file you have on disk with the scientist’s name.   
+Ask the user for another scientist’s name and birthday to add to the dictionary.   
+And update the JSON file you have on disk with the scientist’s name.   
 If you run the program multiple times and keep adding new names, your JSON file should keep getting bigger and bigger.
