--- a/34. Birthday Json.md
+++ b/34. Birthday Json.md
@@ -1,4 +1,4 @@
-34. Birthday Json
+# 34. Birthday Json
 
 In the previous exercise we created a dictionary of famous scientists’ birthdays.   
 Modify your program to load the birthday dictionary from a JSON file on disk, rather than having the dictionary defined in the program.   
@@ -7,3 +7,5 @@ Bonus:
 Ask the user for another scientist’s name and birthday to add to the dictionary.   
 And update the JSON file you have on disk with the scientist’s name.   
 If you run the program multiple times and keep adding new names, your JSON file should keep getting bigger and bigger.
+
+# Answer
