Update 34. Birthday Json.md

--- a/34. Birthday Json.md
+++ b/34. Birthday Json.md
@@ -9,3 +9,7 @@ And update the JSON file you have on disk with the scientist’s name.
 If you run the program multiple times and keep adding new names, your JSON file should keep getting bigger and bigger.
 
 # Answer
+
+```python
+
+```
