Update 34. Birthday Json.md

--- a/34. Birthday Json.md
+++ b/34. Birthday Json.md
@@ -11,5 +11,40 @@ If you run the program multiple times and keep adding new names, your JSON file 
 # Answer
 
 ```python
+import json
 
+celebrity = {
+    "Albert Einstein" : "March 14, 1879",
+    "Marie Curie" : "November 7, 1867",
+    "Antoine Lavoisier" : "August 26, 1743",
+    "Thomas Edison" : "February 11, 1847",
+    "Galileo Galilei" : "February 15, 1564",
+    "Nicolaus Copernicus" : "February 19, 1473",
+    "James Watt" : "January 19, 1736",
+    "Selena Gomez" : "July 22, 1992",
+    "Alexander Graham Bell" : "August 2, 1922",
+    "Isaac Newton" : "January 4, 1643",
+    "Fritz Haber" : "December 9, 1868",
+    "Jane Goodall" : "April 3, 1934",
+    "Charles Darwin" : "February 12, 1809",
+    "Leonhard Euler" : "April 15, 1707",
+    "Stephen William Hawking" : "January 8, 1942",
+}
+
+# Read celebrities.json file
+while True:
+    celebrity_name = input("Put the name of one celebrity: ")
+    if celebrity_name == "End":
+        break
+    celebrity_birthday_month = input("Input one celebrity's month of the birthday: ")
+    celebrity_birthday_day = input("Input one celebrity's day of the birthday: ")
+    celebrity_birthday_year = input("Input one celebrity's year of the birthday: ")
+    
+    
+    celebrity[celebrity_name] = celebrity_birthday_month + " " + celebrity_birthday_day + ", " + celebrity_birthday_year
+    
+
+# Generate celebrities.json file
+with open('c:/Users/USER/Desktop/celebrities.json', 'w') as f:
+    json.dump(celebrity, f, indent = 4)
 ```
