Update 34. Birthday Json.md

--- a/34. Birthday Json.md
+++ b/34. Birthday Json.md
@@ -13,7 +13,7 @@ If you run the program multiple times and keep adding new names, your JSON file 
 ```python
 import json
 
-celebrity = {
+scientists = {
     "Albert Einstein" : "March 14, 1879",
     "Marie Curie" : "November 7, 1867",
     "Antoine Lavoisier" : "August 26, 1743",
@@ -31,20 +31,20 @@ celebrity = {
     "Stephen William Hawking" : "January 8, 1942",
 }
 
-# Read celebrities.json file
+# Read and write scientists.json file
 while True:
-    celebrity_name = input("Put the name of one celebrity: ")
-    if celebrity_name == "End":
+    scientists_name = input("Put the name of one scientists: ")
+    if scientists_name == "End":
         break
-    celebrity_birthday_month = input("Input one celebrity's month of the birthday: ")
-    celebrity_birthday_day = input("Input one celebrity's day of the birthday: ")
-    celebrity_birthday_year = input("Input one celebrity's year of the birthday: ")
+    scientists_birthday_month = input("Input one scientist's month of the birthday: ")
+    scientists_birthday_day = input("Input one scientist's day of the birthday: ")
+    scientists_birthday_year = input("Input one scientist's year of the birthday: ")
     
     
-    celebrity[celebrity_name] = celebrity_birthday_month + " " + celebrity_birthday_day + ", " + celebrity_birthday_year
+    scientists[scientists_name] = scientists_birthday_month + " " + scientists_birthday_day + ", " + scientists_birthday_year
     
 
-# Generate celebrities.json file
-with open('c:/Users/USER/Desktop/celebrities.json', 'w') as f:
-    json.dump(celebrity, f, indent = 4)
+# Generate scientists.json file
+with open('c:/Users/USER/Desktop/scientists.json', 'w') as f:
+    json.dump(scientists, f, indent = 4)
 ```
