--- a/35. Birthday Months.md
+++ b/35. Birthday Months.md
@@ -12,3 +12,64 @@ Your program should output something like:
 	"December": 1
 }
 ```
+
+# Answer
+
+```python
+import json
+import pprint
+
+scientists = {
+    "Albert Einstein" : "March 14, 1879",
+    "Marie Curie" : "November 7, 1867",
+    "Antoine Lavoisier" : "August 26, 1743",
+    "Thomas Edison" : "February 11, 1847",
+    "Galileo Galilei" : "February 15, 1564",
+    "Nicolaus Copernicus" : "February 19, 1473",
+    "James Watt" : "January 19, 1736",
+    "Selena Gomez" : "July 22, 1992",
+    "Alexander Graham Bell" : "August 2, 1922",
+    "Isaac Newton" : "January 4, 1643",
+    "Fritz Haber" : "December 9, 1868",
+    "Jane Goodall" : "April 3, 1934",
+    "Charles Darwin" : "February 12, 1809",
+    "Leonhard Euler" : "April 15, 1707",
+    "Stephen William Hawking" : "January 8, 1942",
+    "Stephen Hawking" : "January 8, 1942",
+    "James Dewey Watson" : "April 6, 1928",
+}
+
+# Generate scientists.json file
+with open("c:/Users/USER/Desktop/scientists.json", "w") as f:
+    json.dump(scientists, f, indent = 4)
+
+
+# Load the data in the json.file
+with open("c:/Users/USER/Desktop/scientists.json", "r") as f:
+    data = json.load(f)  
+    
+# Generate new dictionary
+scientists_month = {
+    "January" : 0,
+    "February" : 0,
+    "March" : 0,
+    "April" : 0,
+    "May" : 0,
+    "June" : 0,
+    "July" : 0,
+    "August" : 0,
+    "September" : 0,
+    "October" : 0,
+    "November" : 0,
+    "December" : 0   
+}
+
+# Count
+for value in data.values():
+    month = value.split()[0]
+    
+    if month in scientists_month:
+        scientists_month[month] = scientists_month[month] + 1
+
+pprint.pprint(scientists_month)
+```
