Update 35. Birthday Months.md

--- a/35. Birthday Months.md
+++ b/35. Birthday Months.md
@@ -64,7 +64,7 @@ scientists_month = {
     "December" : 0   
 }
 
-# Count
+# Count each month of scientists
 for value in data.values():
     month = value.split()[0]
     
