Update 36. Birthday Plots.md

--- a/36. Birthday Plots.md
+++ b/36. Birthday Plots.md
@@ -2,3 +2,82 @@
 
 In the previous exercise we counted how many birthdays there are in each month in our dictionary of birthdays.   
 In this exercise, use the bokeh Python library to plot a histogram of which months the scientists have birthdays in.   
+
+# Answer
+
+```python
+import json
+from bokeh.plotting import figure, output_file, show
+from bokeh.io import output_notebook
+
+output_notebook()
+
+# Data of scientists.json file
+scientists = {
+    "Albert Einstein" : "March 14, 1879",
+    "Marie Curie" : "November 7, 1867",
+    "Antoine Lavoisier" : "August 26, 1743",
+    "Thomas Edison" : "February 11, 1847",
+    "Galileo Galilei" : "February 15, 1564",
+    "Nicolaus Copernicus" : "February 19, 1473",
+    "James Watt" : "January 19, 1736",
+    "Selena Gomez" : "July 22, 1992",
+    "Alexander Graham Bell" : "August 2, 1922",
+    "Isaac Newton" : "January 4, 1643",
+    "Fritz Haber" : "December 9, 1868",
+    "Jane Goodall" : "April 3, 1934",
+    "Charles Darwin" : "February 12, 1809",
+    "Leonhard Euler" : "April 15, 1707",
+    "Stephen William Hawking" : "January 8, 1942",
+    "Stephen Hawking" : "January 8, 1942",
+    "James Dewey Watson" : "April 6, 1928",
+    " Alexander Fleming" : "August 6, 1881",
+    "Rosalind Elsie Franklin" : "July 25, 1920",
+    "Edward Jenner" : "May 17, 1749"
+}
+
+# Generate scientists.json file
+with open("c:/Users/USER/Desktop/scientists.json", "w") as f:
+    json.dump(scientists, f, indent = 4)
+
+# Load the data in the json.file
+with open("c:/Users/USER/Desktop/scientists.json", "r") as f:
+    data = json.load(f)  
+    
+# Generate new dictionary
+scientists_month = {
+    "January" : 0,
+    "February" : 0,
+    "March" : 0,
+    "April" : 0,
+    "May" : 0,
+    "June" : 0,
+    "July" : 0,
+    "August" : 0,
+    "September" : 0,
+    "October" : 0,
+    "November" : 0,
+    "December" : 0   
+}
+
+# Count each month of scientists
+for value in data.values():
+    month = value.split()[0]
+    
+    if month in scientists_month:
+        scientists_month[month] += 1
+
+# Create the data for histogram
+months = list(scientists_month.keys())
+counts = list(scientists_month.values())
+
+# Create the blank plot
+p = figure(height = 600, width = 800, title = "Brithday months of Scientists", x_axis_label = "Month", y_axis_label = "Number", x_range = months)
+
+# Draw the histogram
+p.vbar(x = months, top = counts, width = 0.5, color = 'green')
+
+show(p)
+```
+
+# Graph
