Update 36. Birthday Plots.md

--- a/36. Birthday Plots.md
+++ b/36. Birthday Plots.md
@@ -81,3 +81,4 @@ show(p)
 ```
 
 # Graph
+![graph](https://github.com/ijaejun1025/Code_practice-Python/assets/154036705/7c9bd4fa-4833-4b47-9f67-8381f59be88a)
