Update 26. Check Tic Tac Toe Solutions.md

--- a/26. Check Tic Tac Toe Solutions.md
+++ b/26. Check Tic Tac Toe Solutions.md
@@ -4,10 +4,13 @@ We are trying to build up to a full tic-tac-toe board.
 We will simply focus on checking whether someone has won a game of Tic Tac Toe, not worrying about how the moves were made.   
 
 If a game of Tic Tac Toe is represented as a list of lists, like so:   
-
 ```python
 game = [[1, 2, 0],
 	[2, 1, 0],
 	[2, 1, 1]]
 ```
+
+0 means an empty square.   
+1 means that player 1 put their token in that space.   
+2 means that player 2 put their token in that space.   
 
