Update 26. Check Tic Tac Toe Solutions.md

--- a/26. Check Tic Tac Toe Solutions.md
+++ b/26. Check Tic Tac Toe Solutions.md
@@ -14,3 +14,6 @@ game = [[1, 2, 0],
 1 means that player 1 put their token in that space.   
 2 means that player 2 put their token in that space.   
 
+Your task:   
+Given a 3 by 3 list of lists that represents a Tic Tac Toe game board.   
+Tell me whether anyone has won, and tell me which player won, if any.   
