--- a/26. Check Tic Tac Toe Solutions.md
+++ b/26. Check Tic Tac Toe Solutions.md
@@ -17,3 +17,54 @@ game = [[1, 2, 0],
 Your task:   
 Given a 3 by 3 list of lists that represents a Tic Tac Toe game board.   
 Tell me whether anyone has won, and tell me which player won, if any.   
+
+# Answer
+
+```python
+import numpy as np
+
+# Tic-Tac-Toe game board
+game = [
+    [2, 2, 1],
+    [1, 1, 2],
+    [1, 2, 1]
+]
+
+# line_match(game)
+# Checks if any row in the game board has the same non-zero value (indicating a winning row).
+def line_match(game):
+    for row in game:
+        if len(set(row)) == 1 and row[0] != 0:
+            return row[0]
+    return 0
+
+def column_match(game):
+    # Uses numpy's transpose function to swap rows and columns.
+    transposed_game = np.transpose(game)
+    for col in transposed_game:
+        if len(set(col)) == 1 and col[0] != 0:
+            return col[0]
+    return 0
+
+# diagonal_match(game)
+# Checks if either of the two diagonals in the game board has the same non-zero value (indicating a winning diagonal).
+def diagonal_match(game):
+    if game[1][1] != 0:
+        if game[1][1] == game[0][0] == game[2][2]:
+            return game[1][1]
+        elif game[1][1] == game[0][2] == game[2][0]:
+            return game[1][1]
+    return 0
+
+row_winner = line_match(game)
+column_winner = column_match(game)
+diagonal_winner = diagonal_match(game)
+
+if row_winner > 0:
+    print(f"{row_winner} row wins!")
+if column_winner > 0:
+    print(f"{column_winner} column wins!")
+if diagonal_winner > 0:
+    print(f"{diagonal_winner} diagonal wins!")
+
+```
