Update 29. Tic Tac Toe Game.md

--- a/29. Tic Tac Toe Game.md
+++ b/29. Tic Tac Toe Game.md
@@ -1,8 +1,7 @@
 # 29. Tic Tac Toe Game
 
-
-
-
+In 3 previous exercises, we built up a few components needed to build a Tic Tac Toe game in Python.   
+The next step is to put all these three components together to make a two-player Tic Tac Toe game.   
 
 # Answer
 
