Update 17. Decode A Web Page.md

--- a/17. Decode A Web Page.md
+++ b/17. Decode A Web Page.md
@@ -5,5 +5,17 @@ Use the BeautifulSoup and requests Python packages to print out a list of all th
 # Answer
 
 ```python
+import requests
+from bs4 import BeautifulSoup
 
+url = 'https://www.nytimes.com'
+r = requests.get(url)
+soup = BeautifulSoup(r.text, 'lxml')  # Specifying the 'lxml' parser
+
+# Assuming that story headings may be within <h2> tags with a specific class
+for story_heading in soup.find_all(['h2', 'h3', 'h4'], class_=True):
+    if story_heading.a:
+        print(story_heading.a.text.replace("\n", " ").strip())
+    else:
+        print(story_heading.get_text().replace("\n", " ").strip())
 ```
