Update 21. Write To A File.md

--- a/21. Write To A File.md
+++ b/21. Write To A File.md
@@ -5,3 +5,7 @@ Instead of printing the results to a screen, write the results to a txt file.
 In your code, just make up a name for the file you are saving to.   
 
 # Answer
+
+```python
+
+```
