Update 21. Write To A File.md

--- a/21. Write To A File.md
+++ b/21. Write To A File.md
@@ -7,5 +7,24 @@ In your code, just make up a name for the file you are saving to.
 # Answer
 
 ```python
+import requests
+from bs4 import BeautifulSoup
 
+base_url = 'http://www.nytimes.com'
+r = requests.get(base_url)
+soup = BeautifulSoup(r.text, features="lxml")
+
+filename = input("File to save to: ")
+
+with open(filename, 'w') as f:
+    for story_heading in soup.find_all(['h2', 'h3', 'h4'], class_=True):
+        heading_text = ""
+        if story_heading.a:
+            heading_text = story_heading.a.text.replace("\n", " ").strip()
+        else:
+            heading_text = story_heading.get_text().replace("\n", " ").strip()
+        
+        if heading_text:  # Ensure heading text is not empty
+            print(heading_text)
+            f.write(heading_text + "\n")
 ```
